--- a/workflows/build.yml
+++ b/workflows/build.yml
@@ -2,7 +2,8 @@ name: Build LunarWand
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "**" ]
+  workflow_dispatch:
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:
