--- a/workflows/build.yml
+++ b/workflows/build.yml
@@ -2,18 +2,16 @@ name: Build LunarWand
 
 on:
   push:
-    branches: [ "**" ]
-  workflow_dispatch:
+    branches: ["**"]
   pull_request:
-    branches: [ "main" ]
+    branches: ["**"]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -25,10 +23,4 @@ jobs:
         uses: gradle/actions/setup-gradle@v3
 
       - name: Build
-        run: gradle build
-
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: LunarWand-JAR
-          path: build/libs/*.jar
+        run: ./gradlew build
