--- a/workflows/build.yml
+++ b/workflows/build.yml
@@ -11,16 +11,21 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "17"
+          cache: maven
 
-      - name: Set up Gradle
-        uses: gradle/actions/setup-gradle@v3
+      - name: Build with Maven
+        run: mvn -B -ntp clean package
 
-      - name: Build
-        run: ./gradlew build
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: LunarWand-JAR
+          path: target/*.jar
