--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,7 @@
   <groupId>hu.galaxy</groupId>
   <artifactId>lunarwand</artifactId>
   <version>1.0.0</version>
+  <name>LunarWand</name>
 
   <properties>
     <maven.compiler.source>17</maven.compiler.source>
@@ -28,4 +29,18 @@
       <scope>provided</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.13.0</version>
+        <configuration>
+          <release>17</release>
+          <encoding>UTF-8</encoding>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
