--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,30 +3,32 @@ name: Build LunarWand
 on:
   push:
     branches: ["**"]
-  pull_request:
-    branches: ["**"]
   workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: "17"
           cache: maven
 
-      - name: Build with Maven
+      # Debug: hogy lásd a fájlokat a runneren
+      - name: Show tree
+        run: |
+          ls -la
+          ls -la LunarWand || true
+          ls -la LunarWand/src/main || true
+
+      - name: Build (Maven)
+        working-directory: LunarWand
         run: mvn -B -ntp -f pom.xml clean package
 
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: LunarWand-JAR
-          path: target/*.jar
+          path: LunarWand/target/*.jar
